# rikemorais.worldata

./: .flake8  README.md  index.html  pyproject.toml
.github/workflows/: mkdocs.yaml  tests.yaml
