[tool.poetry]
name = "rikemorais-worldata"
version = "0.1.0"
description = "Worldata is a project created to bring together diverse data sources in one place."
authors = [
    "Henrique Morais <rikeaju@hotmail.com>"
]
readme = "README.md"
packages = [{include = "rikemorais-worldata"}]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
