[tool.poetry]
name = "rikemorais-worldata"
version = "0.1.0"
description = "Worldata is a project created to bring together diverse data sources in one place."
authors = [
    "Henrique Morais <rikeaju@hotmail.com>"
]
readme = "README.md"
packages = [{include = "rikemorais-worldata"}]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
slack-sdk = "^3.26.1"
black = "^23.11.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"
interrogate = "^1.5.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
