[tool.poetry]
name = "rikemorais-worldata"
version = "0.1.0"
description = "Worldata is a project created to bring together diverse data sources in one place."
authors = [
    "Henrique Morais <rikeaju@hotmail.com>"
]
readme = "README.md"
packages = [{include = "rikemorais-worldata"}]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
slack-sdk = "^3.26.1"
black = "^23.11.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"
interrogate = "^1.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.1"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"
mkdocs-glightbox = "^0.3.5"
diagrams = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "bitbucket/*", ".git/*"]
line_length = 120
# Black Compatibility
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
exclude = ["setup.py", "docs", "build", "bitbucket", "tests", "*exceptions.py"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "docs/assets/"
badge-format = "svg"
